// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`combineFieldValues should combine all the array fields 1`] = `
Object {
  "email": Array [
    undefined,
    "asdasd@dsad.com",
    "asdasd@.com",
  ],
  "firstName": Array [
    undefined,
    "asdasd",
    "asdasd",
  ],
  "lastName": Array [
    undefined,
    "asdasd",
    "asd",
  ],
  "test": "test",
}
`;

exports[`combineFieldValues should combine array object correctly 1`] = `
Object {
  "name": Array [
    Object {
      "firstName": "testFirst",
      "lastName": "testLast",
    },
  ],
  "test": Array [
    undefined,
    Object {
      "task": "testLast",
      "what": "testLast",
    },
    Object {
      "what": Array [
        undefined,
        Object {
          "test": "testLast",
        },
      ],
    },
  ],
}
`;

exports[`combineFieldValues should combine object correctly 1`] = `
Object {
  "name": Object {
    "firstName": "testFirst",
    "lastName": Object {
      "bill": Object {
        "luo": "testLast",
      },
    },
  },
}
`;

exports[`combineFieldValues should combine with results 1`] = `
Object {
  "name": "testFirst",
  "name1": "testFirst",
  "name2": "testFirst",
}
`;

exports[`combineFieldValues should handle quoted values 1`] = `
Object {
  "name": Object {
    "foobar": "testFirst",
  },
}
`;

exports[`combineFieldValues should handle quoted values 2`] = `
Object {
  "name": Object {
    "b2ill": "testFirst",
  },
}
`;

exports[`combineFieldValues should return default name value 1`] = `
Object {
  "name": "testFirst",
}
`;
